# AstrBot-desktop

./: .gitignore  Makefile  README.md  README_zh.md  package.json  pnpm-lock.yaml
.github/ISSUE_TEMPLATE/: bug-report.yml
.github/workflows/: build-desktop-tauri.yml  check-rust.yml  check-scripts.yml  lint-workflows.yml
docs/: architecture.md  data-migration.md  development.md  environment-variables.md  repository-structure.md
docs/plans/: 2026-03-06-desktop-updater-design.md  2026-03-06-desktop-updater.md  2026-03-07-dual-channel-updater-design.md  2026-03-07-dual-channel-updater.md  2026-03-07-linux-appimage-updater-design.md  2026-03-07-linux-appimage-updater.md  2026-03-07-nightly-release-cleanup-design.md  2026-03-07-nightly-release-cleanup.md  2026-03-07-release-updater-artifacts.md  2026-03-07-remove-macos-zip-design.md  2026-03-07-remove-macos-zip.md  2026-03-07-tag-poll-release-latest-design.md  2026-03-07-tag-poll-release-latest.md  2026-03-08-disable-ci-appimage-design.md  2026-03-08-disable-ci-appimage-plan.md  2026-04-28-desktop-plugin-dependency-boundary-design.md  2026-04-28-desktop-plugin-dependency-boundary.md
docs/refactor/: refactor-phase2-plan.md  refactor-phase3-plan.md  refactor-plan.md
scripts/: prepare-resources.mjs
scripts/backend/: build-backend.mjs  runtime-arch-utils.mjs  runtime-arch-utils.test.mjs  runtime-core-lock.mjs  runtime-core-lock.test.mjs  runtime-layout-utils.mjs  runtime-layout-utils.test.mjs  runtime-linux-compat-utils.mjs
scripts/ci/: assert-version-normalization-equivalence.sh  (+27 more)
src-tauri/: Cargo.toml  build.rs  nightly-version-format.json  tauri.conf.json  tauri.linux.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: app_constants.rs  app_helpers.rs  app_runtime.rs  app_runtime_events.rs  app_types.rs  bridge_bootstrap.js  close_behavior.rs  desktop_bridge_chat_transport_contract.json  desktop_bridge_commands.rs  desktop_settings.rs  desktop_state.rs  launch_plan.rs  logging.rs  main.rs  process_control.rs  shell_locale.rs  startup_task.rs  update_channel.rs  windows_shutdown.rs
src-tauri/src/backend/: config.rs  http.rs  launch.rs  process_lifecycle.rs  readiness.rs  restart.rs  runtime.rs
src-tauri/src/bridge/: commands.rs  desktop.rs  mod.rs  updater_messages.rs  updater_mode.rs  updater_types.rs
src-tauri/src/lifecycle/: cleanup.rs  events.rs
src-tauri/src/tray/: actions.rs  labels.rs  menu_handler.rs  setup.rs
src-tauri/src/window/: close_confirm.rs  mod.rs  startup_panel.rs
src-tauri/windows/: kill-backend-processes.ps1  nsis-installer-hooks.nsh  portable-runtime-marker.txt
ui/: close-confirm.html  index.html  startup-copy.js
(+43 files in other folders)
