[package]
name = "astrbot-desktop-tauri"
version = "4.17.6"
description = "AstrBot desktop shell powered by Tauri"
authors = ["AstrBot"]
license = "AGPL-3.0"
repository = "https://github.com/AstrBotDevs/AstrBot"
edition = "2021"
rust-version = "1.86"
build = "build.rs"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
chrono = { version = "0.4", features = ["clock"] }
dirs = "5.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
shlex = "1.3"
tauri = { version = "2.0", features = ["tray-icon"] }
url = "2.5"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
